--- a/public/master.css
+++ b/public/master.css
@@ -43,6 +43,9 @@ header{
   top: 30%;
   left: 350px;
 }
+#status{
+  margin-bottom: 10%;
+}
 .form{
   border: 5px solid green;
   width: 250px;
@@ -52,12 +55,43 @@ header{
   margin-top: 20%;
 }
 .items{
-  border: 2px solid green;
+  border: 2px solid pink;
   margin-bottom: 10px;
-  border-top-left-radius: 50%;
   font-weight: bolder;
   font-size: 1.0rem;
+  background-color: pink
+
 }
+.userName{
+  position: relative;
+  color: green;
+  font-weight: bolder;
+  border: 5px solid white;
+  background-color: white;
+  width: 350px;
+  display: inline-flex;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.22);,0 11px 8px rgba(0, 0, 0, 0.22);
+  top: 20%;
+  left: 25%;
+}
+label{
+  border: 1px solid black;
+  background-color: black;
+}
+
+button{
+  background: #333;
+  border: none;
+  padding: 0 1rem;
+  margin: 0.25rem;
+  border-radius: 3px;
+  outline: none;
+  color: #fff;
+}
+h1{
+  color: red;
+}
+
 #input{
   border: none;
   padding: 0 1rem;
@@ -105,4 +139,18 @@ header{
   overflow:auto;
 }
 
+#form{
+  background: rgba(0, 0, 0, 0.15);
+  padding: 0.25rem;
+  position: relative;
+  top: 300px;
+  display: flex;
+  height: 3rem;
+  box-sizing: border-box;
+  position: relative;
+  top: 30%;
+  left: 50px;
+  background-color: #61a2ff;
+  width: 300px;
+}
 }
