--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -20,7 +20,7 @@
         <div id="profile-container">
             <h1>click on any image to create a profile pic</h1>
             <div id="profile-pictures">
-                <img class="profilePics" src="img src=https://i.ibb.co/phzfqv6/12whatsapp-dp-sohohindi-in-300x300.jpg"  alt="profile pic">
+                <img class="profilePics" src="https://i.ibb.co/phzfqv6/12whatsapp-dp-sohohindi-in-300x300.jpg"  alt="profile pic">
                 <img class="profilePics" src="https://i.ibb.co/SPDB4Js/pexels-allec-gomes-6884140.jpg" alt="pexels-allec-gomes-6884140">
                 <img class="profilePics" src="https://i.ibb.co/S5xtysW/pexels-bruno-scramgnon-5007442.jpg" alt="pexels-bruno-scramgnon-5007442">
                 <img class="profilePics" src="https://i.ibb.co/wSwDF6s/pexels-tobias-bj-rkli-1693095.jpg" alt="pexels-tobias-bj-rkli-1693095">
@@ -32,10 +32,10 @@
                 <input type="hidden" name="profilePic" id="profilePic" value="https://i.ibb.co/phzfqv6/12whatsapp-dp-sohohindi-in-300x300.jpg" required="true">
     
                 <label for="hobbies">what are your hobbies</label>
-                <textarea name="hobbies" id="hobbies" cols="30" rows="10" required="true"></textarea>
+                <textarea name="hobbies" id="hobbies" cols="30" rows="3" required="true"></textarea>
     
                 <label for="selfDescription">what can you say about yourself</label>
-                <textarea name="selfDescription" id="selfDescription" cols="30" rows="10"></textarea><br>
+                <textarea name="selfDescription" id="selfDescription" cols="30" rows="3"></textarea><br>
     
                 <label for="username">username</label>
                 <input type="text" id="username" name="username" required="true"><br>
