--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,7 +35,7 @@
                 <div id="private-chats">
                     <a href="/private-rooms/<%= privateChats.roomId %>">
                         <h2><%= privateChats.recipientName %></h3>
-                        <h3> lastMessage: <%= privateChats.lastMessage %></h3>
+                        <p> lastMessage: <%= privateChats.lastMessage %></p>
                     </a>
                 </div>
             <% }) %>
