--- a/public/css/login.css
+++ b/public/css/login.css
@@ -113,7 +113,7 @@ footer{
     
     #form > form > label{
         background-color: black;
-        color: rgb(5, 28, 158);
+        color: white;
         font-weight: bolder;
         font-size: 1.5rem;
     }
