--- a/public/css/login.css
+++ b/public/css/login.css
@@ -9,6 +9,7 @@ body{
     font-weight: bolder;
     background-image: url("cool-background.png");
     background-repeat: repeat;
+    opacity: 7;
 }
 
 header{
@@ -96,9 +97,9 @@ footer{
     }
 
     #form{
-        width: 75%;
+        width: 95%;
         margin-top: 5%;
-        margin-left: 10%;
+        margin-left: 2.5%;
         box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
         justify-content: center;
     }
