--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -144,13 +144,24 @@ footer{
         left: 63%;
     }
 
+    #profile-container{
+        margin: 0%;
+        width: 100%;
+        margin-top: 5%;
+        margin-bottom: 10%;
+        text-align: center;
+        background-color: rgba(255, 250, 250, 0.76);
+        color: rgb(5, 28, 158);
+    }
+
     #profile-pictures > img{
         width: 40%;
-        border-radius: 10em;
+        border-radius: 4vh;
+        margin: 1%;
     }
     #form{
-        width: 90%;
-        margin-left: 3%;
+        width: 100%;
+        margin-left: 0%;
         background-color: white;
         text-align: center;
         box-shadow: 0 15px 30px rgba(0,0,0,0.30), 0 11px 8px rgba(0,0,0,0.22);
@@ -182,6 +193,13 @@ footer{
         position: absolute;
         top: 3%;
         left: 57%;
+    }
+
+    #profile-container{
+        margin: 5%;
+        text-align: center;
+        background-color: rgba(255, 255, 255, 0.37);
+        color: rgb(5, 28, 158);
     }
 
     #profile-pictures > img{
