--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,6 +10,12 @@
 </head>
 <body>
     <header>
+        <div id="loggedInUserIcon">
+            <% loggedInUser.forEach((user)=>{ %>
+            <img src="<%= user.profilePic %>" alt="profile">
+            <h2><%= user.username %></h2>
+            <% }) %>
+        </div>
         <h1>Chat corp</h1>
         <h2>welcome</h2>
         <img src="Image-109992454066564565404-1-iVBOR.png" alt="">
