--- a/public/css/home.css
+++ b/public/css/home.css
@@ -14,8 +14,8 @@ body{
 header{
     background: rgb(63,94,251);
     background: radial-gradient(circle,rgba(63,94,251,1)0%,rgba(0,0,0,1)0%,rgb(3, 18, 87));
-    display: flex;
     height: auto;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -28,6 +28,7 @@ header > img{
     border-radius: 50vh;
 }
 
+
 main{
     display: flex;
     flex-wrap: wrap;
@@ -36,6 +37,37 @@ main{
     justify-content: center;
     align-items: center;
     margin-top: 5%;
+}
+
+h2{
+    background: -webkit-linear-gradient(#660f03, #180202);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bolder;
+}
+h4{
+    background: -webkit-linear-gradient(#fff, #333);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+p{
+    background: -webkit-linear-gradient(#fff, #333);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#loggedInUserIcon{
+margin-right: 90%;
+margin-top: -8%;
+font-size: small;
+align-items: center;
+justify-content: center;
+text-align: center;
+position: absolute;
+}
+#loggedInUserIcon > img{
+    max-width: 35%;
+    border-radius: 55%;
 }
 
 #users{
@@ -59,19 +91,19 @@ main{
 }
 
 #userList > div {
-    background-color: rgb(1, 11, 54);
+    background-color: rgb(2, 8, 37);
     color: rgba(255, 255, 255, 0.486);
     font-weight: bolder;
     border-bottom: dashed;
     padding: 5px;
+    overflow-wrap: break-word;
+    height: auto;
 }
 
 #userList > div > img{
-    max-width: 11%;
+    width: 11%;
     margin: 0;
-    border-radius: 60em;
-    position: relative;
-
+    border-radius: 50%;
 }
 
 #chats{
@@ -118,6 +150,19 @@ footer{
   }
 
   @media only screen and (min-width:50px) and (max-width:480px) {
+    #loggedInUserIcon{
+        margin-right: 80%;
+        margin-top: -21%;
+        font-size: small;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        position: absolute;
+        }
+        #loggedInUserIcon > img{
+            max-width: 50%;
+            border-radius: 50%;
+        }
     header > img{
         max-width: 30%;
         border-radius: 50vh;
@@ -131,14 +176,14 @@ footer{
         overflow: auto;
     }
     #userList > div {
-        background-color: rgb(22, 46, 156);
+        background-color: rgb(1, 4, 17);
         color: rgb(255, 255, 255);
         font-weight: bolder;
         border-bottom: dashed;
         padding: 5px;
     }
     h2{
-        background: -webkit-linear-gradient(#c75205, #000000);
+        background: -webkit-linear-gradient(#660f03, #180202);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         font-weight: bolder;
@@ -157,7 +202,7 @@ footer{
     #userList > div > img{
         max-width: 21%;
         margin: 0;
-        border-radius: 60em;
+        border-radius: 50%;
         position: relative;
         padding: 10px;
     
@@ -166,7 +211,7 @@ footer{
     #chats{
         text-align: center;
         background-color: white;
-        width: 85%;
+        width: 100%;
         overflow: auto;
     }
   }
