--- a/views/updatePassword.ejs
+++ b/views/updatePassword.ejs
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat corp|| login</title>
+    <title>Chat corp|| update password</title>
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/login.css">
-
 </head>
 <body>
     <header>
@@ -17,16 +16,13 @@
     </header>
     <main>
         <div id="form">
-            <h1>log in to your account</h1>
-            <form action="/login" method="post" id="login-form">
-                <label for="username">username</label>
-                <input type="text" id="username" name="username" required="true">
-                <label for="password">password</label>
-                <input type="password" id="password" name="password" required="true">
-                <button type="submit">submit</button>
+            <h1>Create a new password</h1>
+            <form action="/update-password" method="post">
+                <input type="hidden" name="username" value="<%= username %>">
+                <label for="new-password">New password</label>
+                <input type="password" id="new-password" name="password" placeholder="password...">
+                <button type="submit">update</button>
             </form>
-            <h2 id="signUp-btn">Don't have an account yet ? <a href="/">Create one here!!</a></h2>
-            <h3> Forgot password? <a href="/recovery-page">recover here</a></h3>
         </div>
     </main>
     <footer>
