--- a/public/css/login.css
+++ b/public/css/login.css
@@ -95,12 +95,14 @@ footer{
         max-width: 20%;
         border-radius: 50vh;
     }
+    header{
+        max-width: 100%;
+    }
 
     #form{
-        width: 95%;
+        width: 100%;
         margin-top: 5%;
-        margin-left: 2.5%;
-        box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+        margin-left: 0%;
         justify-content: center;
     }
     
