--- a/public/css/private.css
+++ b/public/css/private.css
@@ -55,6 +55,10 @@ header{
     overflow-wrap: break-word;
 }
 
+#message-image{
+    max-width: 30%;
+}
+
 form{
     margin-top: 0%;
     margin-left: 12%;
@@ -107,7 +111,7 @@ font-size: 0.7rem;
         margin-left: 1%;
     }
     form > textarea{
-        width: 85%;
+        width: 100%;
         border-radius: 2vh;
         text-align: center;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
