--- a/views/recovery.ejs
+++ b/views/recovery.ejs
@@ -7,6 +7,7 @@
     <title>chat corp||forgot password </title>
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/login.css">
+    <link rel="icon" type="image/svg" href="Image-109992454066564565404-1-iVBOR.png">
 </head>
 <body>
     <header>
