--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,6 +7,7 @@
     <title>Chat corp|| Sign Up</title>
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/signup.css">
+    <link rel="icon" type="image/svg" href="Image-109992454066564565404-1-iVBOR.png">
 </head>
 <body>
     <header>
@@ -55,10 +56,7 @@
     <footer>
         <h2 class="footer">copyright<i class="fas fa-copyright"></i> 2023 - present| chat corp| developed by sizwe| Email:sizwenkala80@gmail.com</h2>
       </footer>
-<<<<<<< HEAD
       <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-=======
->>>>>>> b3428462175770651ad3070cc3c345cd9e80059d
       <script src="./javascript/signup.js"></script>
 </body>
 </html>
