--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,7 +8,7 @@
   
   /* Set styles for header */
   header {
-    background-color: #222;
+    background-color: #000000;
     color: #fff;
     display: flex;
     justify-content: space-between;
@@ -29,17 +29,24 @@
   }
   
   #form {
-    background-color: #fff;
+    background-color: #000000c9;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 2rem;
     width: 400px;
+    color: #fff;
   }
   
   h1 {
     font-size: 2rem;
     font-weight: bold;
     margin-bottom: 1rem;
+  }
+
+  #message{
+    color: #0084ff;
+    font-weight: bolder;
+    font-size: 1.0rem;
   }
   
   label {
@@ -50,13 +57,15 @@
   input[type="text"],
   input[type="password"] {
     border: none;
-    border-radius: 5px solid black;
+    border-radius: 5vh;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     display: block;
     font-size: 1rem;
     margin-bottom: 1rem;
     padding: 0.5rem;
     width: 100%;
+    text-align: center;
+    height: fit-content;
   }
   
   button[type="submit"] {
@@ -68,6 +77,9 @@
     font-size: 1rem;
     padding: 0.5rem 1rem;
   }
+  button[type="submit"]:hover {
+    background-color: #0084ff;
+  }
   
   #signUp-btn,
   h3 {
@@ -77,7 +89,7 @@
   
   #signUp-btn a,
   h3 a {
-    color: #222;
+    color: #0084ff;
     text-decoration: none;
   }
   
