--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
     <title>Chat corp|| login</title>
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/login.css">
-
+    <link rel="icon" type="image/svg" href="Image-109992454066564565404-1-iVBOR.png">
 </head>
 <body>
     <header>
@@ -17,6 +17,7 @@
     </header>
     <main>
         <div id="form">
+            <h3 id="message"><%= message %></h3>
             <h1>log in to your account</h1>
             <form action="/login" method="post" id="login-form">
                 <label for="username">username</label>
