--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -20,7 +20,7 @@
     <main>
         <div id="profile-container">
             <h1>click on any image to create a profile pic or upload one</h1>
-            <input type="file"  id="profilePicInput" onchange="addProfilePic()">
+            <input type="file"  id="profilePicInput" onchange="addProfilePic()" accept="image/*" >
             <div id="profile-pictures">
                 <img class="profilePics" src="https://i.ibb.co/phzfqv6/12whatsapp-dp-sohohindi-in-300x300.jpg"  alt="profile pic">
                 <img class="profilePics" src="https://i.ibb.co/SPDB4Js/pexels-allec-gomes-6884140.jpg" alt="pexels-allec-gomes-6884140">
