--- a/public/css/private.css
+++ b/public/css/private.css
@@ -33,7 +33,7 @@ header img {
   
   /* Style for main section */
   main {
-    margin-top: 20px;
+    margin-top: 3px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -49,6 +49,7 @@ header img {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding-bottom: 2%;
+    margin-top: 0%;
   }
 
   .sender-me{
@@ -117,10 +118,10 @@ header img {
 
 #messages{
     margin-top: 3%;
-    width: 50%;
+    width: 800px;
     height: 72vh;
     overflow: auto;
-    margin-left: 23%;
+    margin-left: 3%;
     background-color: #0a0909;
     padding: 2%;
 }
@@ -165,4 +166,78 @@ form > textarea{
 form > button{
     width: 5%;
     font-weight: bolder;
+  }
+
+  @media only screen and (min-width:50px) and (max-width:480px) {
+    #messages{
+      margin-top: 2px;
+      width: 100%;
+      height: 72vh;
+      overflow: auto;
+      background-color: #0a0909;
+      padding: 2%;
+      margin-left: 0%;
+  } 
+  form{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #000000;
+    padding: 1px;
+    margin-left: 0%;
+  }
+  #message-input{
+    width: 40%;
+    margin: 0;
+    margin-left: 0%;
+    background-color: #ffffff;
+    text-align: center;
+    border: 2px solid black;
+  }
+  button[type="submit"] {
+    background-color: #2196F3;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.3rem;
+    cursor: pointer;
+    width: 50px;
+  }
+  }
+
+  @media only screen and (min-width:481px) and (max-width:1118px) {
+    #messages{
+      margin-top: 2%;
+      width: 90%;
+      height: 72vh;
+      overflow: auto;
+      background-color: #0a0909;
+      padding: 2%;
+      margin-left: 0%;
+  } 
+  form{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #000000;
+    padding: 1px;
+    margin-left: 0%;
+  }
+  #message-input{
+    width: 40%;
+    margin: 0;
+    margin-left: 0%;
+    background-color: #ffffff;
+    text-align: center;
+    border: 2px solid black;
+  }
+  button[type="submit"] {
+    background-color: #2196F3;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.3rem;
+    cursor: pointer;
+    width: 50px;
+  }
   }
