--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,12 +1,15 @@
 /* Set box-sizing for all elements */
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
   
   /* Set margin and padding to 0 for the body element */
   body {
     margin: 0;
     padding: 0;
+    width: 100%;
   }
   
   /* Style the header section */
@@ -23,10 +26,22 @@
   header img {
     height: 50px;
   }
+  button {
+    background-color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 2px;
+  }
+  button:hover {
+    background-color: #0084ff;
+  }
 
   a {
-    color: #0084ff;
     text-decoration: none;
+    color: #000;
   }
   a:hover {
     text-decoration: underline;
